<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/drawable_textview"
        android:ems="10"
        android:hint="@string/hint_txtnombre"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtNombre"
        android:layout_marginTop="10dp"
        android:background="@drawable/drawable_textview"
        android:ems="10"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress" />


     <EditText
         android:id="@+id/txtComentario"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/txtCorreo"
         android:layout_above="@+id/btnEnviar"
         android:layout_marginTop="10dp"
         android:background="@drawable/drawable_textview"
         android:ems="10"
         android:hint="@string/hint_comentario"
         android:inputType="textMultiLine" >

    </EditText>

     <Button
         android:id="@+id/btnEnviar"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="10dp"
         android:textSize="14sp"
         android:background="@drawable/bordes"
         android:textColor="#FFFFFF"
         android:text="@string/enviar" />
    
</RelativeLayout>
